# mypy-star-plugin

./: .gitpod.yml  app.py  mypy_plugin.py  pyproject.toml
