[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = ""
license = "MIT"
name = "mypy-star-plugin"
version = "0.1.0"

[tool.poetry.dependencies]
mypy = "^0.942"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.942"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
plugins = ["./mypy_plugin.py"]
